# azure-utils-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/azure_utils_mcp/: client.py  server.py
src/azure_utils_mcp/tools/authorization/: activate_role.py  list_eligible_roles.py
src/azure_utils_mcp/tools/cosmosdb/: count_items.py  delete_item.py  get_container_info.py  list_accounts.py  list_containers.py  list_databases.py  query_items.py  read_item.py  upsert_item.py
src/azure_utils_mcp/tools/servicebus/: list_namespaces.py  list_queues.py  list_topics.py  peek_dlq.py  peek_messages.py  peek_subscription_dlq.py  peek_subscription_messages.py  purge_dlq.py  purge_queue.py  purge_subscription.py  purge_subscription_dlq.py  requeue_dlq.py  requeue_subscription_dlq.py  send_batch.py  send_message.py
